# libembeding.axera

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: build_650.yml
include/: embeding.h
src/: LLM.hpp  LLMEmbedSelector.hpp  embeding.cpp
src/ax_model_runner/: ax_model_runner_ax650.cpp
tests/: convert_tokenizer.py  run_qwen3_0.6B_embeding.sh  test_api.cpp  test_embeding.cpp  test_tokenizer.cpp  test_tokenizer.py  test_tokenizer_v2.cpp
